# sen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: bus.rs  cartridge.rs  cheat.rs  controller.rs  cpu.rs  frame.rs  lib.rs  microcode.rs  nes.rs  nes_bus.rs  ppu.rs  simple_bus.rs
core/src/apu/: dmc.rs  envelope.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
core/src/cpu/: nestest.rs  tests.rs
core/src/mapper/: cnrom.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  tqrom.rs  txrom.rs  txsrom.rs  uxrom.rs
core/src/nes/: mod.rs  state_image.rs
core/tests/: cpu.rs  nestest.rs
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
libretro/: Cargo.toml  README.md  libsen_libretro.info
libretro/src/: lib.rs
src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  main.rs  microcode.rs  nes_bus.rs  ppu.rs  simple_bus.rs
tests/: cpu.rs  nestest.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
web/: .gitignore  README.md  Staticfile  package.json  railpack.json  typedoc.json
