[workspace]
members = ["core", "desktop"]
resolver = "3"

[workspace.package]
authors = ["Luka Dornhecker"]
edition = "2024"
license = "MIT"
repository = "https://github.com/lukad/sen"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2"
tracing = { version = "0.1" }
sen-core = { path = "core" }
