[workspace]
members = ["core", "desktop", "libretro", "wasm"]
resolver = "3"

[workspace.package]
authors = ["Luka Dornhecker"]
edition = "2024"
license = "MIT"
repository = "https://github.com/lukad/sen"
version = "0.5.0"

[workspace.dependencies]
thiserror = "2"
tracing = { version = "0.1" }
sen-core = { path = "core" }

[profile.release]
lto = true
